--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -45,7 +45,8 @@ body {
 
 // Hero Section
 .hero-images,
-.look-images {
+.look-images,
+.catalog-content {
     max-width: 100%;
     height: auto;
 }
